Fixing text align for mobile Placing temp footer image for desktop and mobile

--- a/components/styles/footer.module.scss
+++ b/components/styles/footer.module.scss
@@ -3,20 +3,31 @@
 .root {
 	position: relative;
 	width: 100%;
-	height: 300px;
 	display: flex;
 	align-items: flex-end;
+	padding-top: calc($GLOBAL-MARGIN * 4);
 	padding-bottom: $GLOBAL-MARGIN;
 }
 
 .wrapper {
 	margin: 0;
 	padding: 0 $GLOBAL-MARGIN;
-	// background-color: black;
 
-	@include lg {
-		width: 80%;
-		margin: 0 auto;
+	.desktop {
+		display: none;
+	
+		@include lg {
+			display: block;
+			width: 80%;
+			margin: 0 auto;
+		}
 	}
 
+	.mobile {
+		display: block;
+	
+		@include lg {
+			display: none;
+		}
+	}
 }
